OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Next_Step_Rule__mdt/Onboarding_Next_Step_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Gives the Onboarding Next Steps and links Auto Creation of Records where needed.</description>
    <label>Onboarding Next Step Rule</label>
    <pluralLabel>Onboarding Next Step Rules</pluralLabel>
</CustomObject>