OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Next_Step_Rule__mdt/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Create</fullName>
                <default>true</default>
                <label>Auto Create</label>
            </value>
            <value>
                <fullName>Manual Unlock</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>