OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Next_Step_Rule__mdt/fields/Expected_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Value__c</fullName>
    <label>Expected Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>