OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Next_Step_Rule__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>