OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Next_Step_Rule__mdt/fields/Scope_Key__c.field-meta.xml
<CustomField>
    <fullName>Scope_Key__c</fullName>
    <label>Scope Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>